--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 *{
     margin: 0;
     padding: 0;
@@ -91,4 +90,5 @@
     
     .link{
     color: #ffffff;
-    text-decoration: none;}
+    text-decoration: none;
+    }
