--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ body {
 
 .main-menu a {
     text-decoration: none;
-    color: #333;
+    color: #ffd700;
     font-weight: 700;
     transition: color 0.3s;
 }
